# worm-world

./: .env  .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .prettierrc.json  README.md  addFilterImports.js  db_diagram.vuerd copy.json  db_diagram.vuerd.json  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  sqlx-data.json  tauri.conf.json
src-tauri/db/examples/: dummy.sql
src-tauri/db/migrations/: 20221011080821_initial.down.sql  20221011080821_initial.up.sql  20221115025748_db_design_v1.down.sql  20221115025748_db_design_v1.up.sql
src-tauri/icons/: icon.icns  icon_bg.icns
src-tauri/migrations/: 20221115025748_db_design_v1.down.sql  20221115025748_db_design_v1.up.sql  20230113012959_systematic-gene-names.down.sql  20230113012959_systematic-gene-names.up.sql  20230120042939_recombination.down.sql  20230120042939_recombination.up.sql  20230128215958_tasks_and_tree.down.sql  20230128215958_tasks_and_tree.up.sql  20230130202302_v2_tasks_and_trees.down.sql  20230130202302_v2_tasks_and_trees.up.sql  20230131213450_ids-to-ulids.down.sql  20230131213450_ids-to-ulids.up.sql  20230221005816_addResultStrainToTask.down.sql  20230221005816_addResultStrainToTask.up.sql  20230526010832_strains.down.sql  20230526010832_strains.up.sql  20230716221724_initial.down.sql  20230716221724_initial.sql
src-tauri/src/: bindings.rs  dummy.rs  interface.rs  main.rs  models.rs
src-tauri/src/interface/: allele.rs  allele_expr.rs  bulk.rs  gene.rs  (+17 more)
(+509 files in other folders)
