[package]
name = "worm-world"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
ts-rs = "6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
tauri = { version = "1.2", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate", "offline" ] }
futures = "0.3"
chrono = "0.4"
uuid = { version = "1.2", features = ["v4", "fast-rng"] }

directories = "4.0"
anyhow = "1.0"
thiserror = "1.0"

[dependencies.tauri-plugin-download]
git = "https://github.com/FabianLars/tauri-plugin-download"

[dev-dependencies]
pretty_assertions = "1.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev.package.sqlx-macros]
opt-level = 3
